--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 * {
     padding: 0px;
     margin: 0px;
-    //scroll-behavior: smooth;
+    scroll-behavior: smooth;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -165,14 +165,19 @@ body {
                         position: absolute;
                         bottom: 30px;
                         left: 30px;
-                        background: rgba(0, 0, 0, 0.5);
+                        background: rgba(0, 0, 0, 0.671);
                         width: 280px;
+                        height: 100px;
                         -webkit-transition: .5s ease;
                         transition: .5s ease;
                         color: $white;
                         padding: 10px;
                         text-align: center;
                         border-radius: 5px;
+                        p label{
+                            color: $cyan;
+                            font-weight: bold;
+                        }
                     }
                     -webkit-box-flex: 0;
                     flex: 0 0 33.3%;
@@ -205,16 +210,20 @@ body {
             text-align: center;
             text-shadow: none;
             box-shadow:0px 0px 10px rgba(2, 2, 5, 0.664);
-            background-color: rgb(10, 10, 10);
+            //background-color: rgb(10, 10, 10);
+            background-image: url("../img/img12blr.jpg");
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
             h2 {
                 font-size: 26px;
                 text-transform: uppercase;
                 font-family: 'Josefin Sans';
-                color: $cyan;
+                color: $white;
             }
             #skillstypes {
                 width: 100%;
-                padding: 0 15%;
+                padding: 0 7%;
                 display: flex;
                 flex-wrap: wrap;
                 //align-items: center;
@@ -222,24 +231,60 @@ body {
                 margin: 0px auto;
                 .type {
                     -webkit-box-flex: 0;
-                    flex: 0 0 33.3%;
+                    flex: 0 0 26.3%;
                     //padding: 0 8%;
                     margin-top: 5%;
-                    h3 {
-                        color: $white;
-                        margin-top: 10px;
-                        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+                    margin-left: 1%;
+                    margin-right: 1%;
+                    font-family: 'Josefin Sans';
+                    color: $white;
+                    .ovr2 {
+                        height: 250px;
+                        //width: 200px;
+                        background-color: rgba(0, 0, 0, 0.63);
+                        //box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.685);
+                        border: 1px solid rgb(56, 56, 56);
+                        border-radius: 8px;
+                        
+                        h3 {
+                            color: $white;
+                            margin-top: 10px;
+                        }
+                        p{
+                            margin-top: 5px;
+                            color: rgb(242, 255, 62);
+                        }
+                        .highly {
+                            color: rgb(101, 255, 62);
+                        }
+                        .begn {
+                            color: rgb(255, 139, 62);
+                        }
+                        i {
+                            padding-top: 30px;
+                        }
                     }
-                    img {
+                    .ovr2:hover {
+                        transform: scale(1.05);
+                        -webkit-transition:.4s ease-out;
+                        transition:.4s ease-out;
+                        //background-image: linear-gradient(to bottom right, rgba(0, 23, 87, 0.418), rgba(0, 174, 255, 0.37));
+                        background-color: $cyan;
+                        border: 1px solid $cyan;
+                    }
+                    
+                    /*img {
                         //width: 60%;
                         transition: transform .1s;
                         //max-width: 100%;
+                        //border-radius: 18px;
+                        box-shadow: 1px 1px 10px rgba(0,0,0,.3);
                     }
                     img:hover {
                         transform: scale(1.15);
                         -webkit-transition:.2s ease-out;
                         transition:.2s ease-out;
-                    }
+                    }*/
                 }
             }
         }
@@ -269,6 +314,14 @@ body {
                     max-width: 100%;
                     font-size: 1.4em;
                     text-align: justify;
+                    label {
+                        color: $cyan;
+                        i {
+                        margin-top: 5px;
+
+                        color: #1560b6;
+                        }
+                    }
                 }
                 #image {
                     -webkit-box-flex: 0;
@@ -333,9 +386,9 @@ body {
                     background: 0 0;
                     outline: 0;
                     color: $white;
-                    border: 1px solid $white;
+                    border: 1px solid rgb(56, 56, 56);
                     #name {
-                        border-top: 1px solid $white;
+                        border-top: 1px solid rgb(56, 56, 56);
                     }
                 }
                 .text {
@@ -356,8 +409,8 @@ body {
                     outline: 0;
                     background: 0 0;
                     color: $white;
-                    border: 1px solid $white;
-                    font-size: 1.1em;
+                    border: 1px solid rgb(56, 56, 56);
+                    font-size: 1.2em;
                 }
                 textarea:focus {
                     border: 1px solid $cyan;
@@ -368,7 +421,7 @@ body {
                 #submit {
                     border-top: none;
                     cursor: pointer;
-                    background-color: $black;
+                    //background-color: $black;
                     //transition: .7s;
                 }
                 #submit:hover {
